@@ -4,6 +4,9 @@ History
 Version 0.6.13 - Unreleased
 ---------------------------
 
+- API change! Added boolean "subscribeable" to IChannel.
+  [tmog]
+
 Version 0.6.12 - 2009-06-11
 ---------------------------
 
